# scrapling-mcp

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  VDD.md  VDD_TESTING.md  pyproject.toml  tasks.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: quickstart.md
docs/research/: scrapling.md
specs/001-mcp-server-implementation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mcp-server-implementation/checklists/: requirements.md
specs/001-mcp-server-implementation/contracts/: mcp-tools.json
src/mcp_scraper/: __init__.py  config.py  server.py  stealth.py
tests/: __init__.py  conftest.py  fixtures.py
tests/e2e/: __init__.py  conftest.py  test_error_scenarios.py  test_live_http.py  test_stealth_e2e.py
tests/integration/: __init__.py  test_mcp_tools.py
tests/unit/: __init__.py  test_config.py  test_server_validation.py  test_stealth.py
